# libigl-comiso

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
cmake/: catch2.cmake  comiso.cmake  gmm.cmake  libigl.cmake  nanobind.cmake
include/igl/copyleft/comiso/: frame_field.h  frame_field.impl  miq.h  miq.impl  nrosy.h  nrosy.impl
python/: binding.cpp
python/igl_comiso/: __init__.py
tests/: test_common.h
tests/include/igl/copyleft/comiso/: miq.cpp
